# BIOME

./: .gitignore  BIOME.code-workspace  BIOME_2.0_LOG.md  CACHE_CLEARING_SOLUTION.md  CHANGELOG.md  CODEBASE_CLEANUP_SUMMARY.md  DATA_SHARING_TEST_GUIDE.md  DEVELOPMENT.md  FIXES_SUMMARY.md  ICON_UPDATE_SUMMARY.md  LICENSE  NOTICE  PERFORMANCE_AND_DUAL_MODE_SUMMARY.md  README.md  RELEASE_NOTES_1.4.3.md  SOLO_RELEASE_CHECKLIST.md  build.ps1  convert_to_icns.py  copyright-header.txt  create-clean-repo.ps1  create-distribution.ps1  deploy-production.ps1  dev-start.ps1  install.ps1  launch-web-mode.bat  package.json  prepare-for-repo-clean.ps1  prepare-for-repo.ps1  production-server.js  readme.md  setup-demo-database.js  setup-demo-for-msi.js  setup-dependencies.bat  setup-dependencies.ps1  setup-fresh-demo.js
backend/: app-meta.json  (+1 more)
projet-analyse-image-frontend/src-tauri/: Cargo.toml  create_icons.py  create_icons_updated.py  tauri.conf.json  tauri.conf.json.new
projet-analyse-image-frontend/src-tauri/capabilities/: migrated.json
projet-analyse-image-frontend/src-tauri/icons/: create-icon.ps1  icon.icns
projet-analyse-image-frontend/src-tauri/resources/backend/: Cargo.toml  app-meta.json  package.json
projet-analyse-image-frontend/src-tauri/resources/backend/src/: server.js
projet-analyse-image-frontend/src-tauri/resources/backend/src/database/: db.js  demo-data.js  schema.js
projet-analyse-image-frontend/src-tauri/resources/backend/src/routes/: metadata-options.js  projects.js  resources.js  system.js
projet-analyse-image-frontend/src-tauri/src/: main.rs
(+160 files in other folders)
