[package]
name = "biome-app"
version = "1.4.3"
description = "Bio Imaging Organization and Management Environment"
authors = ["BIOME Team"]
license = ""
repository = ""
default-run = "biome-app"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1.29.1", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
chrono = { version = "0.4", features = ["serde"] }

[features]
# This feature is used for production builds
custom-protocol = ["tauri/custom-protocol"]
